--- a/HotelManagement/src/app/landing/landing.component.html
+++ b/HotelManagement/src/app/landing/landing.component.html
@@ -1,6 +1,6 @@
-<div>
-    <button (click)="admin()">Admin</button>
-    <button (click)="owner()">Owner</button>
-    <button (click)="user()">User</button>
+<div class="main">
+    <button (click)="admin()" class="button">Admin</button>
+    <button (click)="owner()" class="button">Owner</button>
+    <button (click)="user()" class="button">User</button>
 
 </div>
