--- a/HotelManagement/src/app/landing/landing.component.html
+++ b/HotelManagement/src/app/landing/landing.component.html
@@ -1,6 +1,8 @@
-<div class="main">
-    <button (click)="admin()" class="button">Admin</button>
-    <button (click)="owner()" class="button">Owner</button>
-    <button (click)="user()" class="button">User</button>
-
+<div class="main" >
+   
+    <button mat-raised-button color="warn" (click)="admin()" class="button" >Admin</button>
+    <button mat-raised-button color="warn" (click)="owner()"  class="button1">Owner</button>
+    <button mat-raised-button color="warn" (click)="user()"   class="button2">User</button>
+    
+    <h1 class="head">Welcome To Hotel Paradise</h1>
 </div>
