--- a/HotelManagement/src/app/owner/owner-login/owner-login.component.html
+++ b/HotelManagement/src/app/owner/owner-login/owner-login.component.html
@@ -1,1 +1,38 @@
-<p>owner-login works!</p>
+<div class="main">
+    <button mat-raised-button color="warn" (click)="back()">Back</button>
+    <h2 class="head">Login-Form</h2>
+    <form class="container"  [formGroup]="ownerLoginForm" >
+        <mat-form-field  class="field">
+            <mat-label>User Name</mat-label>
+            <input type="text" matInput formControlName="userName">
+          
+            <mat-hint *ngIf="!ownerLoginForm.get('userName')?.touched">Please Enter User Name </mat-hint>
+            <mat-error>User Name is <strong>required</strong></mat-error>
+            <span class="err" *ngIf="ownerLoginForm.get('userName')?.errors?.['maxlength']">Maximum 10 character's
+                allowed</span>
+            <span class="err" *ngIf="ownerLoginForm.get('userName')?.errors?.['minlength']">Minimum 4 character's
+                allowed</span>
+        </mat-form-field> <br>
+
+    <mat-form-field   class="field">
+        <mat-label>Password</mat-label>
+            <input [type]="showPass ? 'text' : 'password'"  formControlName="password" matInput >
+            <!-- <mat-icon  (click)="showPassword()"  matSuffix   >visibility_off</mat-icon> -->
+
+                   
+            <span class="p-viewer" *ngIf="showPass" (click)="showPassword()">
+                <mat-icon   >visibility</mat-icon></span>
+               
+    
+                <span class="p-viewer" *ngIf="!showPass"  (click)="showPassword()">
+                    <mat-icon >visibility_off</mat-icon></span>
+            <mat-hint *ngIf="!ownerLoginForm.get('password')?.touched" class="hint">Please Enter Password</mat-hint> 
+            <mat-error>Password is <strong>required</strong></mat-error> 
+
+         
+    </mat-form-field><br>
+    <button mat-raised-button color="accent" (click)="login()">Login</button><br><br>
+    <!-- <button mat-raised-button color="accent">New User</button> -->
+   <br><p class="para">Don't have an account?</p> <button mat-raised-button color="accent" (click)="SignUp()">SignUp</button>
+    </form>
+</div>
