--- a/HotelManagement/src/app/admin/admin-login/admin-login.component.html
+++ b/HotelManagement/src/app/admin/admin-login/admin-login.component.html
@@ -1,1 +1,3 @@
-<div class="main"><p>admin-login works!</p></div>
+<div class="main">
+    <button mat-raised-button color="warn" (click)="back()">Back</button><br>
+    <p>admin-login works!</p></div>
