--- a/HotelManagement/src/app/user/user-login/user-login.component.html
+++ b/HotelManagement/src/app/user/user-login/user-login.component.html
@@ -1,1 +1,3 @@
-<div class="main"><p>user-login works!</p></div>
+<div class="main">
+    <button mat-raised-button color="warn" (click)="back()">Back</button><br> 
+    <p>user-login works!</p></div>
